# calc-wx

./: CMakeLists.txt  README.md  png2c
app/: CMakeLists.txt  appframe.cpp  appframe.h  calcmodel.cpp  calcmodel.h  main.cpp  main.h  panels.cpp  panels.h
assets/: _5a5c5c.png.h  _7b7b7c.png.h  _fca00b.png.h  btn_ac.png.h  btn_decimal.png.h  btn_digit0.png.h  btn_digit0_span2.png.h  btn_digit1.png.h  btn_digit2.png.h  btn_digit3.png.h  btn_digit4.png.h  btn_digit5.png.h  btn_digit6.png.h  btn_digit7.png.h  btn_digit8.png.h  btn_digit9.png.h  btn_divide.png.h  btn_equals.png.h  btn_minus.png.h  btn_modulo.png.h  btn_mul.png.h  btn_plus.png.h  btn_sign.png.h  btn_times.png.h
